Fixed dropdown z-index in records' preview

--- a/public_html/layouts/basic/styles/layout/_Nav.scss
+++ b/public_html/layouts/basic/styles/layout/_Nav.scss
@@ -311,7 +311,6 @@
 
 		.dropdown-menu {
 			min-width: 300px;
-			z-index: 1025;
 
 			.nav-item {
 				margin: 0;
